--- a/layouts/default.html
+++ b/layouts/default.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>A Brand New nanoc Site - <%= @item[:title] %></title>
+    <title><%= @item[:title] %> - StackFu Docs</title>
     <link rel="stylesheet" type="text/css" href="/stylesheets/styles.css" media="screen">
     <link rel="stylesheet" type="text/css" href="/stylesheets/coderay.css" media="screen">
     <meta name="generator" content="nanoc 3.1.5">
@@ -14,12 +14,12 @@
     <div id="sidebar">
       <h2>Documentation</h2>
       <ul>
-        <li><a href="/">Basic</a></li>
+        <li><a href="/">Getting Started</a></li>
         <li><a href="/writing-scripts/">Writing Scripts</a></li>
       </ul>
       <h2>StackFu</h2>
       <ul>
-        <li><a href="http://groups.google.com/group/nanoc/">Main Page</a></li>
+        <li><a href="http://beta.stackfu.com/">StackFu Page</a></li>
         <li><a href="irc://chat.freenode.net/#stackfu">IRC Channel</a></li>
         <li><a href="http://docs.stackfu.com/">Docs</a></li>
       </ul>
