--- a/content/stylesheets/styles.css
+++ b/content/stylesheets/styles.css
@@ -122,11 +122,13 @@ code {
 }
 
 table {
+  width: 100%;
   border: 0; 
   background: #fafafa;
   border-spacing: 0;
   padding: 0;
   margin: 0;
+  margin-bottom: 20px;
 }
 
 tr {
@@ -150,7 +152,7 @@ td code {
   font-size: 1.2em;
 }
 
-td.validation {
+td.validation, td.type {
   font-weight: bold;
   width: 20%;
 }
