Fixed layout and script components documentation.

--- a/layouts/default.haml
+++ b/layouts/default.haml
@@ -33,18 +33,18 @@
           .topic
             Getting Started
             %ul
-              %li= link_to 'Installation', ''
-              %li= link_to 'Commands', ''
+              %li= link 'Installation'
+              %li= link 'Commands'
 
           .topic
             Writing Scripts
             %ul
-              %li= link_to 'Introduction', '/intro/'
-              %li= link_to 'Manifest', '/manifest/'
-              %li= link_to 'Controls', ''
-              %li= link_to 'Requirements', ''
-              %li= link_to 'Executions', ''
-              %li= link_to 'Validations', ''
+              %li= link 'Introduction', '/intro/'
+              %li= link 'Manifest'
+              %li= link 'Controls'
+              %li= link 'Requirements'
+              %li= link 'Executions'
+              %li= link 'Validations'
               
           .topic
             CLI Interface
