--- a/content/stylesheets/sass/application.sass
+++ b/content/stylesheets/sass/application.sass
@@ -10,6 +10,7 @@ body
     family: Helvetica, Tahoma, Arial
     size: 1em
   color: $black
+  line-height: 1.4em
 
 a:link, a:visited
   color: $blue
@@ -23,7 +24,6 @@ a:hover
 p
   padding: 5px 0px 5px 0px
   font: 0.9em
-  line-height: 1.4em
   margin-bottom: 10px
 
 h1
@@ -38,7 +38,11 @@ h2
   font-weight: bold
   
 h3
+  margin-bottom: 15px
+  margin-top: 15px
   font-size: 1.4em
+  font-weight: bold
+
 h4
   font-size: 1.3em
 h5
@@ -153,7 +157,8 @@ div.flash.error, div.flash.alert
   
   .topics
     float: left
-    width: 200px
+    width: 190px
+    padding-right: 10px
     
     .topic
       font-weight: bold
@@ -174,6 +179,31 @@ div.flash.error, div.flash.alert
     
     .contents
       margin-left: 20px
+      
+      table
+        margin: 10px
+        border: 1px #ccc solid
+        font-size: 0.9em
+        background-color: #f5f5f5
+        width: 100%
+        
+        thead
+          tr
+            border-bottom: 1px #ccc solid
+          th
+            font-weight: bold
+            padding: 5px
+        
+        tbody
+          td
+            padding: 5px
+          td.validation, td.type
+            font-weight: bold
+            width: 20%
+          td.description
+            width: 50%
+          td.example
+            width: 30%
       
       ul
         margin-left: 20px
