--- a/content/controls.haml
+++ b/content/controls.haml
@@ -44,7 +44,7 @@ title: Controls
         type: Radio
         required: "true"
         options: 
-        - ['y', 'Yes]
+        - ['y', 'Yes']
         - ['n', 'No']
 	
 %p
@@ -55,7 +55,7 @@ title: Controls
   - **name:** control name, words must be separated by underscores	    
   - **label:** a label for the control 	    
   - **required:** indicates whether the control must have a value. Accepted values: `true` or `false`.	    
-  - **validations:** a list of validations to apply to this control. The format of this field is always **`type: value`**.     
+  - **validations:** a list of validations to apply to this control. The format of this field is always `type: value`.     
 
 
 %h3 Validations
