--- a/layouts/default.haml
+++ b/layouts/default.haml
@@ -34,7 +34,7 @@
             Getting Started
             %ul
               %li= link 'Installation'
-              %li= link 'Commands'
+              %li= link 'Quick Run'
 
           .topic
             Writing Scripts
