Getting Started section

--- a/layouts/default.haml
+++ b/layouts/default.haml
@@ -34,13 +34,12 @@
             Getting Started
             %ul
               %li= link 'Installation'
-              %li= link 'Quick Run'
+              %li= link 'Quick Start'
 
           .topic
             Writing Scripts
             %ul
               %li= link 'Introduction', '/intro/'
-              %li= link 'Manifest'
               %li= link 'Controls'
               %li= link 'Requirements'
               %li= link 'Executions'
