--- a/content/stylesheets/sass/application.sass
+++ b/content/stylesheets/sass/application.sass
@@ -204,6 +204,10 @@ div.flash.error, div.flash.alert
             width: 50%
           td.example
             width: 30%
+            
+      p
+        code
+          font-size: 1.2em
       
       ul
         margin-left: 20px
@@ -212,8 +216,8 @@ div.flash.error, div.flash.alert
           list-style-type: disc
 
       pre
+        width: 100%
         margin-top: 10px
-        margin-bottom: 20px
         border: solid 1px #ccc
         background: #f5f5f5
         padding: 10px
@@ -512,3 +516,15 @@ form.simple_form
     border: 1px solid lightgray
     padding: 5px
     margin: 10px 10px 10px 0px
+    
+.hint
+  width: 95%
+  border: 1px #ccc solid
+  padding: 8px 10px 10px 40px
+  background: url("/images/lightbulb.png") no-repeat scroll 10px 10px transparent
+  background-color: #eef
+  font-size: 0.9em
+  margin-bottom: 10px
+  
+  code
+    font-size: 1.2em
