Fixed some misleading titles in Quick Start.

--- a/content/quick_start.haml
+++ b/content/quick_start.haml
@@ -80,7 +80,7 @@ title: Quick Start
   
 %br/
   
-%h3 3. Writing the script description
+%h3 3. Script components
 
 %p
   Let's re-run the create command, now passing a few parameters:
@@ -198,7 +198,7 @@ title: Quick Start
   
   %img{ :src => "/images/script-tutorial-01.png" }
   
-%h3 4. Control validations
+%h3 4. Adding validations
 
 %p
   Our script so far takes one parameter, called ports, and it expects the contents of this
