Added index page.

--- a/layouts/default.haml
+++ b/layouts/default.haml
@@ -33,6 +33,7 @@
           .topic
             Getting Started
             %ul
+              %li= link 'Index', '/'
               %li= link 'Installation'
               %li= link 'Quick Start'
 
@@ -48,10 +49,11 @@
           .topic
             CLI Interface
             %ul
-              %li= link_to 'Creating', ''
-              %li= link_to 'Cloning', ''
-              %li= link_to 'Publishing', ''
-              %li= link_to 'Listing Scripts and Servers', ''
+              %li= link 'Commands'
+              %li= link 'Dump'
+              %li= link 'Clone'
+              %li= link 'Publish'
+              %li= link 'Listing Scripts and Servers'
               
         .article
           .contents
