--- a/content/stylesheets/sass/application.sass
+++ b/content/stylesheets/sass/application.sass
@@ -25,6 +25,7 @@ p
   padding: 5px 0px 5px 0px
   font: 0.9em
   margin-bottom: 10px
+  margin-left: 10px
 
 h1
   font-size: 1.6em
@@ -44,9 +45,13 @@ h3
   font-weight: bold
 
 h4
-  font-size: 1.3em
-h5
+  margin-bottom: 15px
+  margin-top: 15px
   font-size: 1.2em
+  font-weight: bold
+  
+h5
+  font-size: 1.1em
 
 strong
   font-weight: bold
@@ -180,7 +185,23 @@ div.flash.error, div.flash.alert
     .contents
       margin-left: 20px
       
-      table
+      table.toc
+        border: 0
+        width: 100%
+      
+        td
+          vertical-align: top
+          padding-right: 15px
+          padding-left: 15px
+          
+          h3
+            margin-bottom: 20px
+          
+          li
+            margin-top: 10px
+            margin-bottom: 10px
+      
+      table.items
         margin: 10px
         border: 1px #ccc solid
         font-size: 0.9em
@@ -210,14 +231,16 @@ div.flash.error, div.flash.alert
           font-size: 1.2em
       
       ul
-        margin-left: 20px
+        margin-left: 30px
         li
           line-height: 1.5em
           list-style-type: disc
 
       pre
         width: 100%
+        margin-left: 10px
         margin-top: 10px
+        margin-bottom: 20px
         border: solid 1px #ccc
         background: #f5f5f5
         padding: 10px
@@ -525,6 +548,8 @@ form.simple_form
   background-color: #eef
   font-size: 0.9em
   margin-bottom: 10px
+  margin-left: 10px
   
   code
     font-size: 1.2em
+    
