Added documentation for stackfu commands.

--- a/content/index.haml
+++ b/content/index.haml
@@ -53,10 +53,10 @@ title: Main
 
       %ul
         %li 
-          = link 'Commands'
-          is a brief walk-through of all commands and
-          what can be accomplished by the command line
-          interface RubyGem;
+          = link 'Usage'
+          is a brief introduction of what's available
+          from the command line, and how to configure
+          and start using the RubyGem;
         %li 
           = link 'Create'
           explains the command used to create new 
