--- a/content/stylesheets/sass/application.sass
+++ b/content/stylesheets/sass/application.sass
@@ -127,9 +127,10 @@ div.flash.error, div.flash.alert
   margin-top: 25px
   padding: 0px 0px 0px 0px
   .inner
-    width: 800px
+    width: 940px
     margin: 0px auto 0px auto
     padding: 10px 0px 0px 0px
+    border-top: 3px solid #d8d8d8
     .left
       float: left
       width: 700px
@@ -161,6 +162,7 @@ div.flash.error, div.flash.alert
   margin: auto
   
   .topics
+    margin-top: 15px
     float: left
     width: 190px
     padding-right: 10px
