Added missing ExecutableExists requirement

--- a/content/requirements.haml
+++ b/content/requirements.haml
@@ -34,6 +34,7 @@ title: Requirements
 	:contents => <<-EOS
 FileExists    | that a given file exists			     
 SymlinkExists | that a given symlink exists            
+ExecutableExists    | that a given file exists and is executable
 DirExists     | that a given directory exits           
 ProcessExists | that a process is runnning             
 RubyCanLoad   | if ruby can load a given lib      
