Added GitHub ribbon

--- a/layouts/default.haml
+++ b/layouts/default.haml
@@ -59,6 +59,9 @@
           .contents
             = yield
         %br{ :clear => 'all' }
+        
+    %a{:href => "http://github.com/stackfu/docs"}
+      %img{:alt => "Fork me on GitHub", :src => "http://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png", :style => "position: absolute; top: 0; right: 0; border: 0;"}/
 
     .footer
       .inner
