External URLs will open in a new browser tab/window.

--- a/content/index.haml
+++ b/content/index.haml
@@ -86,7 +86,7 @@ title: Main
   
   %ul
     %li
-      = link_to 'fork our repo', 'http://github.com/stackfu/docs'
+      = link 'fork our repo', 'http://github.com/stackfu/docs'
       in GitHub, make the changes, and send a pull request (always preferred) or;
     %li
       email 
