--- a/layouts/default.haml
+++ b/layouts/default.haml
@@ -60,7 +60,7 @@
             = yield
         %br{ :clear => 'all' }
         
-    %a{:href => "http://github.com/stackfu/docs"}
+    %a{:href => "http://github.com/stackfu/docs", :target => "_blank"}
       %img{:alt => "Fork me on GitHub", :src => "http://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png", :style => "position: absolute; top: 0; right: 0; border: 0;"}/
 
     .footer
