Added requirements <code> fixes

--- a/content/requirements.haml
+++ b/content/requirements.haml
@@ -23,9 +23,9 @@ title: Requirements
         type: FileExists
 
 %p
-  Each entry has a `type` and `data` field. In the example, two checks will be 
-  performed: that the file `/usr/bin/apt-get` exists and is executable and the the 
-  file `/var/data/some_file.dat` also exists.
+  Each entry has a <code>type</code> and <code>data</code> field. In the example, 
+  two checks will be performed: that the file <code>/usr/bin/apt-get</code> exists 
+  and is executable and the the file <code>/var/data/some_file.dat</code> also exists.
 
 %p Here are the types of checks the engine can perform:
 
