--- a/layouts/default.haml
+++ b/layouts/default.haml
@@ -54,6 +54,16 @@
               %li= link 'Dump'
               %li= link 'Publish'
               %li= link 'Listing Scripts and Servers'
+          
+          .topic
+            Sandboxing
+            %ul
+              %li= link 'What is a Sandbox?', '/sandbox/'
+              %li= link 'Creating the Server'
+              %li= link 'Setting Up'
+              %li= link 'Provisioning'
+              %li= link 'Installing Stackup'
+              %li= link 'Testing Scripts'
               
         .article
           .contents
