--- a/content/stylesheets/sass/application.sass
+++ b/content/stylesheets/sass/application.sass
@@ -180,6 +180,7 @@ div.flash.error, div.flash.alert
           
         
   .article
+    min-height: 700px
     border-left: 1px solid #cbcbcb
     float: left
     width: 739px
