--- a/content/sandbox.haml
+++ b/content/sandbox.haml
@@ -5,7 +5,7 @@ title: What is a Sandbox?
 %h2 What is a Sandbox?
 
 %p
-  So you created an amazing script but how will you test it? You obviously doesn't
+  So you created an amazing script but how will you test it? You obviously don't
   want to mess up a live server only to test your scripts and you will need to
   install it a couple of times until it's perfect right?
   
